--- a/Lesson 14/Hometask/index.html
+++ b/Lesson 14/Hometask/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <div class="content">
+
         <div class="block">
             <p class="text">X:</p>
-            <input class="input" name="width" type="text">
+            <input type="text">
         </div>
+
         <div class="block">
             <p class="text">Y:</p>
-            <input class="input" name="height" type="text">
+            <input type="text">
         </div>
+
         <button class="button">Create</button>
+
     </div>
 </body>
 </html>
