--- a/Lesson 14/Hometask/index.html
+++ b/Lesson 14/Hometask/index.html
@@ -10,12 +10,12 @@
     <div class="content">
 
         <div class="block">
-            <p class="text">X:</p>
+            <label class="label">X:</label>
             <input type="text">
         </div>
 
         <div class="block">
-            <p class="text">Y:</p>
+            <label class="label">Y:</label>
             <input type="text">
         </div>
 
