--- a/Lesson 14/Hometask/chess.html
+++ b/Lesson 14/Hometask/chess.html
@@ -10,13 +10,13 @@
     <div class="content">
 
         <div class="block">
-            <label class="label">X:</label>
-            <input type="text">
+            <label class="label" for="x">X:</label>
+            <input id="x" type="text">
         </div>
 
         <div class="block">
-            <label class="label">Y:</label>
-            <input type="text">
+            <label class="label" for="y">Y:</label>
+            <input id="y" type="text">
         </div>
 
         <button class="button">Create</button>
